Changelog
=========

after 2.0b8
-----------

* Add a property ``gallery_rel_attribute`` to be able to use a js-gallery
  product other than `Products.jsImagePopups`.

  eg set it to ``prettyPhoto`` to use `collective.prettyphoto`.
  [fRiSi]

* Added property to configure the maximum number of gallery items
  to be displayed.
  [fRiSi]

2.0b8 (2011-03-21)
------------------

* Now using the show/hide functionality added in raptus.article.core 2.0b8
* Render XHTML valid page template
  [saily]

2.0b6 (2010-12-07)
------------------

* fix franz translation

2.0b5 (2010-11-10)
------------------

* Added French translations

2.0b4 (2010-10-24)
------------------

* Set zip_safe flag to False

2.0b3 (2010-10-21)
------------------

* Updated readme and manual

2.0b2 (2010-10-20)
------------------

* First public release