@@ -7,23 +7,24 @@
 
     <ul class=""
         tal:attributes="class string:visualNoMarker manageableList gallery ${view/css_class}">
-        
+
         <tal:item repeat="item view/images">
         <li class="component"
             tal:condition="item/img"
             tal:attributes="class string:component ${item/class}">
-            
-            <metal:manage use-macro="context/raptus_article_macros/macros/manage" /> 
+
+            <metal:manage use-macro="context/raptus_article_macros/macros/manage" />
             <a href=""
                tal:omit-tag="not: item/url"
-               tal:attributes="href item/url;
+               tal:attributes="href item/viewUrl;
                                rel item/rel;
-                               title item/caption">
+                               title item/caption;
+                               data-popupUrl item/url">
                 <span tal:omit-tag="item/url">
                     <img src="" tal:replace="structure item/img" />
                 </span>
             </a>
-            
+
             <p class="discreet"
                tal:condition="python: item['description'] and view.show_description"
                tal:content="item/description">
@@ -31,6 +32,6 @@
             </p>
         </li>
         </tal:item>
-        
+
     </ul>
 </html>
